Kuri and Nobin stage added

--- a/app/src/main/res/layout/activity_daily_games.xml
+++ b/app/src/main/res/layout/activity_daily_games.xml
@@ -6,4 +6,52 @@
     android:layout_height="match_parent"
     tools:context=".DailyGames">
 
+    <LinearLayout
+        android:layout_width="395dp"
+        android:layout_height="715dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/character_3" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="20dp"
+            android:layout_marginBottom="20dp"
+            android:text="আজকে আমরা পেপার প্লেন বানাবো, তুমি কি শিখতে চাও?" />
+
+        <Button
+            android:id="@+id/buttonStartTogether"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="চল, একসাথে শুরু করি"
+            android:textColor="@color/colorAccent"
+            android:textSize="17dp"
+            android:background="@drawable/ic_group_3"/>
+
+        <Button
+            android:id="@+id/buttonStartYourself"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="না, আমি নিজেই বানাবো"
+            android:textColor="@color/colorAccent"
+            android:textSize="17dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/ic_group_3"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
