--- a/app/src/main/res/layout/activity_daily_games2.xml
+++ b/app/src/main/res/layout/activity_daily_games2.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DailyGames">
+    tools:context=".DailyGames2">
+
 
     <LinearLayout
-        android:id="@+id/game1"
+        android:id="@+id/game2"
         android:layout_width="395dp"
         android:layout_height="715dp"
         android:layout_marginStart="8dp"
@@ -22,22 +23,22 @@
         android:gravity="center">
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imageView44"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:srcCompat="@drawable/character_3" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/textView22"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textSize="20dp"
             android:layout_marginBottom="20dp"
-            android:text="আজকে আমরা পেপার প্লেন বানাবো, তুমি কি শিখতে চাও?" />
+            android:text="আজকে আমরা ছবি আঁকব, তুমি কি শিখতে চাও?" />
 
         <Button
-            android:id="@+id/buttonStartTogether"
+            android:id="@+id/buttonStartTogether2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="চল, একসাথে শুরু করি"
@@ -46,17 +47,17 @@
             android:background="@drawable/ic_group_3"/>
 
         <Button
-            android:id="@+id/buttonStartYourself"
+            android:id="@+id/buttonStartYourself2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="না, আমি নিজেই বানাবো"
+            android:text="না, আমি ছবি এঁকে ফেলেছি"
             android:textColor="@color/colorAccent"
             android:textSize="17dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/ic_group_3"/>
 
         <Button
-            android:id="@+id/buttonTryElse"
+            android:id="@+id/buttonTryElse2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="অন্য কিছু চেষ্টা কর"
@@ -64,8 +65,6 @@
             android:textSize="17dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/ic_group_3"/>
-
     </LinearLayout>
-
 
 </android.support.constraint.ConstraintLayout>
